[package]
name = "config-macro"
version = "0.1.0"
edition = "2021"

description = "Macros for using config as a struct within your application"
license = "MIT"
homepage = "https://github.com/some-page"
repository = "https://github.com/some-page"
readme = "README.md"
keywords = ["configuration", "yaml", "macro"]

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits"]}
serde = "1.0.192"
serde_yaml = "0.9.27"
proc-macro2 = "1.0.69"

[lib]
proc-macro = true

[features]
struct = []
